# ripcord

./: .dockerignore  .envrc  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MOBILE.md  README.md  biome.json  build-windows-electron.sh  bunfig.toml  docker.sh  electron.sh  flake.nix  knip.json  package.json  start.sh  tsconfig.json
.bun-cache/7zip-bin/: 5.2.0@@@1
.bun-cache/abbrev/: 3.0.1@@@1
.bun-cache/acorn/: 8.15.0@@@1
.bun-cache/acorn-jsx/: 5.3.2@@@1
.bun-cache/agent-base/: 7.1.4@@@1
.bun-cache/ajv/: 6.12.6@@@1
.bun-cache/ajv-keywords/: 3.5.2@@@1
.bun-cache/ansi-regex/: 5.0.1@@@1  6.2.2@@@1
.bun-cache/ansi-styles/: 4.3.0@@@1  6.2.3@@@1
.bun-cache/any-promise/: 1.3.0@@@1
.bun-cache/app-builder-bin/: 5.0.0-93f69ee49b615ee6@@@1
.bun-cache/app-builder-lib/: 26.7.0@@@1
.bun-cache/argparse/: 2.0.1@@@1
.bun-cache/aria-hidden/: 1.2.6@@@1
.bun-cache/async/: 3.2.6@@@1
.bun-cache/async-exit-hook/: 2.0.1@@@1
.bun-cache/asynckit/: 0.4.0@@@1
.bun-cache/at-least-node/: 1.0.0@@@1
.bun-cache/awaitqueue/: 3.3.0@@@1
.bun-cache/axios/: 1.13.5@@@1
.bun-cache/balanced-match/: 1.0.2@@@1  4.0.2@@@1
.bun-cache/base64-js/: 1.5.1@@@1
.bun-cache/bl/: 4.1.0@@@1
.bun-cache/boolbase/: 1.0.0@@@1
.bun-cache/boolean/: 3.2.0@@@1
.bun-cache/brace-expansion/: 1.1.12@@@1  2.0.2@@@1  5.0.2@@@1
.bun-cache/braces/: 3.0.3@@@1
.bun-cache/buffer/: 5.7.1@@@1
.bun-cache/buffer-crc32/: 0.2.13@@@1  1.0.0@@@1
.bun-cache/buffer-equal-constant-time/: 1.0.1@@@1
.bun-cache/buffer-from/: 1.1.2@@@1
.bun-cache/builder-util/: 26.4.1@@@1
.bun-cache/builder-util-runtime/: 9.5.1@@@1
.bun-cache/bun-sfe-autoupdater/: 0.0.4@@@1
.bun-cache/bun-sfe-autoupdater@0.0.4@@@1/: README.md  package.json
.bun-cache/bun-types/: 1.3.9@@@1
.bun-cache/bundle-require/: 5.1.0@@@1
.bun-cache/cac/: 6.7.14@@@1
.bun-cache/cacache/: 19.0.1@@@1
.bun-cache/cacheable-lookup/: 5.0.4@@@1
.bun-cache/cacheable-request/: 7.0.4@@@1
.bun-cache/call-bind-apply-helpers/: 1.0.2@@@1
.bun-cache/callsites/: 3.1.0@@@1
.bun-cache/chalk/: 3.0.0@@@1  4.1.2@@@1  5.6.2@@@1
.bun-cache/cheerio/: 1.0.0-dbfe6df8fcdbac19@@@1
.bun-cache/cheerio-select/: 2.1.0@@@1
.bun-cache/chokidar/: 4.0.3@@@1
.bun-cache/chownr/: 3.0.0@@@1
.bun-cache/chromium-pickle-js/: 0.2.0@@@1
.bun-cache/ci-info/: 4.3.1@@@1  4.4.0@@@1
.bun-cache/class-variance-authority/: 0.7.1@@@1
.bun-cache/cli-cursor/: 3.1.0@@@1
.bun-cache/cli-spinners/: 2.9.2@@@1
.bun-cache/cliui/: 8.0.1@@@1
.bun-cache/clone/: 1.0.4@@@1
.bun-cache/clone-response/: 1.0.3@@@1
.bun-cache/clsx/: 2.1.1@@@1
.bun-cache/color/: 5.0.3@@@1
.bun-cache/color-convert/: 2.0.1@@@1  3.1.3@@@1
.bun-cache/color-name/: 1.1.4@@@1  2.1.0@@@1
.github/: dependabot.yml
.pr-review/: review.config.json
apps/desktop/sidecar/: Cargo.toml
apps/desktop/sidecar/archived/voice-processing/: README.md
apps/desktop/sidecar/src/: app.rs  file_test.rs  lib.rs  macos_app_audio_capture.swift  main.rs  pipeline.rs  protocol.rs  runtime.rs  voice_filter_core.rs
apps/desktop/sidecar/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
apps/desktop/sidecar/src/platform/linux/: global_shortcuts.rs  pulse.rs
apps/desktop/sidecar/tests/: audio_quality.rs
audio-tests/: README.md  analyze.py  baseline.json  run-all.sh  test.sh
data/: config.ini
data-test/: config.ini
docs/: client-runtime-reliability.md  mobile-handoff-plan.md  threads-architecture.md  voice-reconnect-hardening.md  voice-stop-watch-reconnect-race.md
e2e-spike/: README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts
scripts/: start.mjs  verify-web.ts  wsl-mobile-proxy.ps1
(+1774 files in other folders)
