[package]
name = "sharkord-capture-sidecar"
version = "0.1.0"
edition = "2021"
publish = false
autotests = false

[features]
default = []
voice-filter = [
  "dep:aec3",
  "dep:clap",
  "dep:deep_filter",
  "dep:earshot",
  "dep:hound",
  "dep:ndarray",
  "dep:tract-core",
  "dep:tract-hir",
  "dep:tract-onnx",
  "dep:tract-pulse",
]

[lib]
name = "sharkord_capture_sidecar"
path = "src/lib.rs"

[[bin]]
name = "sharkord-capture-sidecar"
path = "src/main.rs"

[[bin]]
name = "voice-filter-file-test"
path = "src/bin/voice-filter-file-test.rs"
required-features = ["voice-filter"]

[[test]]
name = "audio_quality"
path = "tests/audio_quality.rs"
required-features = ["voice-filter"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
hound = { version = "3", optional = true }
aec3 = { version = "0.1.5", optional = true }
base64 = "0.22.1"
bytemuck = "1.20.0"
earshot = { version = "1.0.0", optional = true }
deep_filter = { git = "https://github.com/Rikorose/DeepFilterNet.git", package = "deep_filter", default-features = false, features = ["tract", "logging", "default-model-ll"], optional = true }
ndarray = { version = "0.15.6", optional = true }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tract-core = { version = "=0.21.4", optional = true }
tract-hir = { version = "=0.21.4", optional = true }
tract-onnx = { version = "=0.21.4", optional = true }
tract-pulse = { version = "=0.21.4", optional = true }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "implement",
  "Win32_Devices_Properties",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.58.0"
